# Frey-PRPLL

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml
src/: Args.cpp  CMakeLists.txt  Gpu.cpp  Task.cpp  clwrap.h  main.cpp
src/cl/: carryfused.cl
src/cuda/: clwrap_cuda.cpp  cudawrap.cpp  cudawrap.h  opencl_compat.cuh  test_compile_cl.cpp  test_cuda_backend.cpp  test_m61.cpp  test_simple.cpp  tinycuda.h
tools/: primenet.py  submit_debug.py  submit_v5.py
